force-app/main/default/objects/Dummy33__c/Dummy33__c.object-meta.xml
<CustomObject>
    <label>Dummy33</label>
    <nameField>
        <label>Dummy33 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy33</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>