force-app/main/default/objects/Dummy33__c/fields/FooBar047__c.field-meta.xml
<CustomField>
    <fullName>FooBar047__c</fullName>
    <label>FooBar047</label>
    <length>255</length>
    <type>Text</type>
</CustomField>