force-app/main/default/objects/Dummy33__c/fields/FooBar099__c.field-meta.xml
<CustomField>
    <fullName>FooBar099__c</fullName>
    <label>FooBar099</label>
    <length>255</length>
    <type>Text</type>
</CustomField>