force-app/main/default/objects/Dummy33__c/fields/FooBar151__c.field-meta.xml
<CustomField>
    <fullName>FooBar151__c</fullName>
    <label>FooBar151</label>
    <length>255</length>
    <type>Text</type>
</CustomField>